<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupEmailActivity"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_by_email"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:textColor="@color/chord_dark_more"
                android:fontFamily="@font/elicedigitalbaeum_regular"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/name_et"
                android:hint="@string/name"
                android:textSize="10sp"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/email_et_email"
                android:hint="@string/email"
                android:textSize="10sp"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/nickname_et"
                android:hint="@string/nickname"
                android:textSize="10sp"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/password_et_email"
                android:textSize="10sp"
                android:hint="@string/password"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/password_et_email_confirm"
                android:hint="@string/password_confirm"
                android:textSize="10sp"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/phone_number_et"
                android:hint="@string/phone_number"
                android:textSize="10sp"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_edittext"
                android:id="@+id/confirmation_number_et"
                android:hint="@string/confirmation_number"
                android:textSize="10sp"
                android:padding="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:layout_margin="20dp"
                android:text="@string/to_signup"
                android:fontFamily="@font/elicedigitalbaeum_regular"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>