<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/login"
        android:fontFamily="@font/elicedigitalbaeum_bold"
        android:textColor="@color/chord_dark_more"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_chord"
            android:textSize="@dimen/initial"
            android:textColor="@color/black"
            android:fontFamily="@font/elicedigitalbaeum_regular"/>
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/initial"
            android:textColor="#ff0000"
            android:clickable="true"
            android:focusable="true"
            android:onClick="mOnClick"
            android:fontFamily="@font/elicedigitalbaeum_bold"/>
    </LinearLayout>
    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:fontFamily="@font/elicedigitalbaeum_regular"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:padding="10dp"
        android:background="@drawable/login_edittext"/>
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:fontFamily="@font/elicedigitalbaeum_regular"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:background="@drawable/login_edittext"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/checkbox"/>
        <TextView
            android:id="@+id/stay_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_login"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_id"
            android:textSize="@dimen/initial"
            android:id="@+id/find_id"
            android:onClick="mOnClick"
            android:textColor="@color/black"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_pw"
            android:textSize="@dimen/initial"
            android:id="@+id/find_pw"
            android:onClick="mOnClick"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:onClick="mOnClick"
        android:padding="10dp"/>
</LinearLayout>